# diffship

./: .diffshipignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  justfile  lefthook.yml  mise.toml
.agents/: README.md
.diffship/: .gitignore  config.toml
.serena/: project.yml
docs/: AI_HANDOFF_FLOW.md  AI_PROJECT_TEMPLATE.md  AI_WORKFLOW.md  BUNDLE_FORMAT.md  CONFIG.md  DECISIONS.md  DEFINITION_OF_DONE.md  DETERMINISM.md  HANDOFF_TEMPLATE.md  IMPLEMENTATION_STATUS.md  OPS_WORKFLOW.md  PATCH_BUNDLE_FORMAT.md  PROJECT_KIT_TEMPLATE.md  SPEC_CHANGE.md  SPEC_V1.md  TEST_PLAN.md  TRACEABILITY.md  USAGE_GUIDE.md  VERSIONING.md
scripts/: apply_m4_02_promotion_commit_policy.py  apply_m4_02_promotion_commit_policy.sh  check-doc-links.sh  check-traceability.sh  fix_m3_02_tasks_compile.py  fix_m3_02_tasks_compile.sh  fix_m3_tasks_dead_code.py  fix_m3_tasks_dead_code.sh  fix_m4_01_collapsible_if.py  fix_m4_01_collapsible_if.sh  fix_m4_01_config_precedence.py  fix_m4_01_config_precedence.sh  fix_m4_02_clippy.py  fix_m4_02_clippy.sh  install_m2_06_pack_fix.py  install_m2_06_pack_fix.sh
src/: bundle_compare.rs  cli.rs  exit.rs  explain.rs  filter.rs  git.rs  handoff.rs  handoff_change_hints.rs  handoff_common.rs  handoff_config.rs  handoff_part_context.rs  handoff_patch_analysis.rs  handoff_patch_chunks.rs  handoff_semantics.rs  main.rs  pathing.rs  plan.rs  preview.rs
tests/: m0_integration.rs  m1_worktrees.rs  m2_apply_verify.rs  m2_pack_fix.rs  m2_promotion_loop.rs  m2_strategy.rs  m3_tasks.rs  m4_02_promotion_switch.rs  m4_verify_profiles.rs  (+9 more)
(+57 files in other folders)
