[package]
name = "diffship"
version = "0.3.0"
edition = "2024"

[dependencies]
zip = "0.6.6"

anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.27.0"
fs4 = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.39", features = ["formatting", "local-offset"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.17.1"
